--- a/montring-k8s-cluster/alertmanager-rule.yaml
+++ b/montring-k8s-cluster/alertmanager-rule.yaml
@@ -3,7 +3,7 @@ kind: AlertmanagerConfig
 metadata:
   name: alert-config
   labels:
-    release: prometheus
+    role: iti-config
 spec:
   route:
     groupBy: ["alertname"]
